Bug 70392 - fdbev compositor fails to build without EGL
Summary: fdbev compositor fails to build without EGL
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-11 21:42 UTC by Yann E. MORIN
Modified: 2013-10-11 22:31 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix fbdev compositor without EGL (930 bytes, text/plain)
2013-10-11 21:42 UTC, Yann E. MORIN
Details

Description Yann E. MORIN 2013-10-11 21:42:25 UTC
Created attachment 87491 [details]
Fix fbdev compositor without EGL

In weston-1.3.0, the fbdev compositor does not build when EGL is disabled:

    compositor-fbdev.c:924:45: error: 'EGL_DEFAULT_DISPLAY' undeclared (first use in this function)

This is due to code added by cset #4aa756dc (add libhybris support):

    compositor-fbdev.c:924:    if (gl_renderer_create(&compositor->base, EGL_DEFAULT_DISPLAY,

Attached patch to hopefully /fix/ this.
Comment 1 Kristian Høgsberg 2013-10-11 22:31:46 UTC
commit 9acd374822022793b09427d67ea4033915343dd8
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Fri Oct 11 15:25:42 2013 -0700

    fbdev: Fix compilation without EGL
    
    We have to duplicate #defines and typedefs for the EGL types and constants
    we use in gl-renderer.h so we can compile the fbdev backend without EGL.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=70392


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.