src/gl-renderer.h
@@ -56,6 +56,7 @@ typedef void *EGLDisplay;
 typedef void *EGLSurface;
 typedef intptr_t EGLNativeDisplayType;
 typedef intptr_t EGLNativeWindowType;
+#define EGL_DEFAULT_DISPLAY NULL
 
 static const EGLint gl_renderer_opaque_attribs[];
 static const EGLint gl_renderer_alpha_attribs[];
